--- a/report/references.bib
+++ b/report/references.bib
@@ -142,3 +142,40 @@
          },
   note = {Accessed: 2025-03-18},
 }
+
+@article{Gretton2012,
+  author  = {Arthur Gretton and Karsten M. Borgwardt and Malte J. Rasch and Bernhard Schölkopf and Alexander J. Smola},
+  title   = {A Kernel Two-Sample Test},
+  journal = {Journal of Machine Learning Research},
+  volume  = {13},
+  pages   = {723--773},
+  year    = {2012},
+  url     = {https://www.jmlr.org/papers/volume13/gretton12a/gretton12a.pdf}
+}
+
+@misc{DonkeyAI2024,
+  author = {Donkey AI},
+  title = {RKHS and MMD in Machine Learning},
+  year = {2024},
+  month = {March 17},
+  url = {https://www.youtube.com/watch?v=zFffYuDGslg},
+  note = {YouTube Video}
+}
+
+@misc{Wu2024,
+  author = {Chieh Wu},
+  title = {RKHS in ML: Comparing Two Samples},
+  year = {2024},
+  month = {March 17},
+  url = {https://www.youtube.com/watch?v=5qNKolRwOkQ},
+  note = {YouTube Video}
+}
+
+@misc{Gretton2019,
+  author = {Arthur Gretton},
+  title = {RKHS in ML: Comparing Two Samples},
+  year = {2019},
+  month = {October 24},
+  institution = {Gatsby Computational Neuroscience Unit, University College London},
+  note = {Slides}
+}
