added final citations to report

--- a/report/report.tex
+++ b/report/report.tex
@@ -180,7 +180,7 @@ where:
     \item $X$ and $Y$ represent hourly traffic counts for each day type within a specific monthly group.
 \end{itemize}
 
-As shown in \citet{Gretton2019}, the MMD statistic is calculated as:
+As shown in \cite{Gretton2019}, the MMD statistic is calculated as:
 
 \[
 \text{MMD}^2(X, Y) = \mathbb{E}_{x,x'}[k(x, x')] + \mathbb{E}_{y,y'}[k(y, y')] - 2\mathbb{E}_{x,y}[k(x, y)]
